# meta

./: IMPLEMENTATION_SUMMARY.md  PYTHON_SERVER_README.md  README.md  VOICE_COMMANDS_README.md  kanban_task.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  setup_server.py  test_cat_facts.py
.cursor/: mcp.json
src/app/: globals.css  page.tsx
src/app/api/cat-facts/multiple/: route.ts
src/app/api/cat-facts/single/: route.ts
src/components/: CatFacts.tsx  VoiceCommand.tsx
src/hooks/: useVoiceRecording.ts
src/types/: voice.ts
src/utils/: elevenlabs.ts
